ges: Fix compilation with latest GLib

g_clear_pointer() is now preserving the type of its arguments for the
free function.

ges-xml-formatter.c: In function ‘_dispose’:
ges-xml-formatter.c:1635:7: error: function called through a non-compatible type [-Werror]
       (GDestroyNotify) g_hash_table_unref);
/usr/include/glib-2.0/glib/gmem.h:121:8: note: in definition of macro ‘g_clear_pointer’
       (destroy) (_ptr);                                                        \
        ^~~~~~~

https://bugzilla.gnome.org/show_bug.cgi?id=797310